<resources>
	<string name="app_name">Assignment201714029</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="nav_header_title">Abdul Wazed Rifat</string>
	<string name="nav_header_subtitle">201714029</string>
	<string name="nav_header_desc">Navigation header</string>
	<string name="action_settings">Settings</string>


	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="accelerometer">Accelerometer</string>
	<string name="gyroscope">Gyroscope</string>
	<string name="proximity">Proximity</string>
	<string name="shake_detection">Shake Detection</string>
	<string name="nan">0</string>
	<string name="x_axis">X axis : </string>
	<string name="y_axis">Y axis</string>
	<string name="z_axis">z Axis</string>
	<string name="maximum_value_of_proximity_sensor">Maximum Value of Proximity Sensor</string>
	<string name="current_value_of_proximity_sensor">Current Value of Proximity SenSor</string>
	<string name="load_data">load data</string>
	<string name="prev_data">Prev Data :</string>
	<string name="title_activity_maps">Map</string>
	<string name="shake_me">Shake Me</string>
	<string name="gyroscope_value">Gyroscope Values</string>
	<string name="text">text</string>
	<string name="map">Map</string>
</resources>
