<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/mobile_navigation"
	app:startDestination="@+id/nav_Accelerometer">

	<fragment
		android:id="@+id/nav_Accelerometer"
		android:name="com.idp.group1.assignment201714029.Accelerometer"
		android:label="@string/accelerometer"
		tools:layout="@layout/fragment_accelerometer" />
	<fragment
		android:id="@+id/nav_Gyroscope"
		android:name="com.idp.group1.assignment201714029.Gyroscope"
		android:label="@string/gyroscope"
		tools:layout="@layout/fragment_gyroscope" />
	<fragment
		android:id="@+id/nav_Proximity"
		android:name="com.idp.group1.assignment201714029.Proximity"
		android:label="@string/proximity"
		tools:layout="@layout/fragment_proximity" />
	<fragment
		android:id="@+id/nav_ShakeDetection"
		android:name="com.idp.group1.assignment201714029.Shake_detection"
		android:label="@string/shake_detection"
		tools:layout="@layout/fragment_shake_detection" />
	<fragment
		android:id="@+id/nav_GyroscopeValues"
		android:name="com.idp.group1.assignment201714029.GyroscopeValues"
		android:label="@string/gyroscope_value"
		tools:layout="@layout/fragment_gyroscope_values"/>
	<fragment
		android:id="@+id/nav_map"
		android:name="com.idp.group1.assignment201714029.map"
		android:label="@string/map"
		tools:layout="@layout/fragment_map"/>
</navigation>