<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".Accelerometer">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:layout_gravity="center"
		android:gravity="center">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:weightSum="3">
			<TextView
				android:layout_weight="1"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/x_axis"
				android:textSize="25sp"
				android:layout_margin="20dp"
				android:padding="10dp"/>
			<TextView
				android:id="@+id/xAxisID"
				android:layout_weight="2"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/nan"
				android:textSize="25sp"
				android:layout_margin="20dp"
				android:padding="10dp"/>
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:weightSum="3">
			<TextView
				android:layout_weight="1"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/y_axis"
				android:textSize="25sp"
				android:layout_margin="20dp"
				android:padding="10dp"/>
			<TextView
				android:id="@+id/yAxisID"
				android:layout_weight="2"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/nan"
				android:textSize="25sp"
				android:layout_margin="20dp"
				android:padding="10dp"/>
		</LinearLayout>

	</LinearLayout>


</FrameLayout>